# Backgammon-Game-Design

./: CMakeLists.txt  README.md  main.cpp
game/: config.hpp  game.hpp  map.hpp  player.hpp  policy.hpp
utils/: console.hpp  console_abstract.hpp  console_windows.hpp  point.hpp  utils.hpp
